AI-JADEDEVS4/src/objects/Trial_Key_History__c.object
<CustomObject>
    <fields>
        <fullName>Button_Pressed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Button Pressed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trial_Key_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trail_Key_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trail Key Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trial Key History</relationshipLabel>
        <relationshipName>Trial_Key_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trial_Key_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial Key Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Trial Key History</relationshipLabel>
        <relationshipName>Trial_Key_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trial_Key_Status__c</fullName>
        <label>Trial Key Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_Button_Pressed__c</fullName>
        <label>When Button Pressed</label>
        <type>DateTime</type>
    </fields>
    <label>Trial Key History</label>
    <nameField>
        <displayFormat>TKH-{0000}</displayFormat>
        <label>Trial Key History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trial Key History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>